--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,12 @@
 
-
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border: 1px solid red;
 }
 body {
-    background-image: url(../images/background2.jpeg);
-    background-size: cover;
+    background-color: white;
 }
 header {
     padding: 20px 35px;
@@ -18,18 +16,17 @@ header {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    background-size: cover;
-    background-position: center;
     background-attachment: fixed;
     background-position: 80%;
     z-index: 9999;
-    background-color: rgba(120, 29, 66, .8)
+    background-color: gray;
 }
 header a {
     text-decoration: none;
     color: black;
 }
 header h1 {
+    border: 1px solid red;
     flex: 1;
 }
 header nav {
@@ -51,29 +48,27 @@ header nav ul li a {
     font-size: 1.55vw;
 }
 
+
+
 .section-box {
     width: 100%;
-    margin: 0 auto;
+    margin: 50px 0;
 }
 .section-title {
     text-align: center;
     width: 25%;
-    background: rgb(207,182,166);
     border-radius: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .75);
+    background-color: gray;
     padding: 12px;
     margin-left: 2.5%;
     position: relative;
     top: 20px;
-
 }
 .primary-section {
     margin: auto auto;
     padding: 40px;
-    background-color: rgba(241, 183, 58, 0.5);
     width: 90%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .75);
-    
+    background-color: gray;
 }
 
 .hero {
@@ -91,6 +86,7 @@ header nav ul li a {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    border: 3px solid var(--secondary-color);
 }
 .hero-img img {
     width: 50px;
@@ -105,54 +101,99 @@ header nav ul li a {
     justify-content: space-around;
     flex: 3;
 }
+.info-section {
+    border: 3px solid var(--secondary-color);
+    margin: 12px 0;
+    border-radius: 30px;
+    padding: 8px 12px 12px 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .about {
-    flex: 1;
     display: flex;
     flex-direction: column;
 }
 .about p {
     flex: 4;
-    margin: 2.5% 0;
+    width: 90%;
+    margin: 8px auto;
 }
 
 .interests {
-    flex: 2;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.hero-info h2 {
     width: 90%;
+    margin: auto;
+}
+.info-section h2 {
     margin: 8px auto;
     text-align: center;
-    color: black;
-    background: rgb(207, 182, 166);
-    border-radius: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .75);
+    color: var(--tertiary-color);
+    width: 90%;
 }
 
 
 .interest {
     flex: 1;
-    margin: 8px;
-    padding: 8px;
-    min-width: 300px;
     display: flex;
-    
+    justify-content: space-between;
+    align-items: flex-start;
+    min-width: 300px;
+    margin: 8px 0;
 }
 
-.interest-img{
-    flex: 1;
-    margin: 0 8px;
+.interest-img {
     max-width: 40px;
 }
 .interest-text {
-    flex: 2;
-    margin: auto;
     text-align: left;
-    padding: 0 20px;
+    flex: 1;
+    margin: 0 20px;
 }
 .info-section {
     width: 90%;
 }
 
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 500px;
+}
+.project-box {
+    flex: 2;
+    display: flex;
+    flex-wrap: wrap;
+}
+.project, .main-project {
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+.project {
+    width: 50%;
+    height: 50%;
+}
+.main-project {
+    flex: 1;
+    background-image: url(../images/projectbackground1.png);
+    height: 100%;
+}
+.project-title {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background-color: rgba(255, 255, 255, .25);
+}
+.project-title h2 {
+    color: black;
+    padding: 8px;
+    background-color: white;
+}
+
+.project-title:hover {
+    background-color: rgba(255, 255, 255, .0);
+}
