--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,90 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
 }
 body {
     background-color: white;
+    display: inline-flex;
+    font-family: "azonix", Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
+    
+}
+main {
+    width: 90%;
 }
 header {
-    padding: 20px 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: -webkit-sticky;
+    width: 10%;
+    height: 100vh;
     position: sticky;
+    position: -webkit-sticky;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     top: 0;
-    background-attachment: fixed;
-    background-position: 80%;
     z-index: 9999;
     background-color: gray;
 }
 header a {
     text-decoration: none;
     color: black;
+    text-align: center;
 }
 header h1 {
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
     flex: 1;
+    font-size: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .8);
+    background-color: yellow;
+    z-index: 100;
 }
 header nav {
-    flex: 2;
-    margin: 7px 0;
+    flex: 9;
+    width: 100%;
 }
-
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
     list-style: none;
+    height: 100%;
+}
+header nav ul li{
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-size: 25px;
+    font-weight: bold;
+}
+header nav a {
+    text-align: left;
+    padding-left: 12px;
+}
+header nav ul li:hover {
+    background-color: red;
+    box-shadow: 0 0 12px rgba(0, 0, 0, .8);
 }
 
-header nav ul li a {
-    padding: 10px 15px;
-    font-weight: lighter;
-    font-size: 2vw;
-}
 .section-box {
     width: 100%;
     margin: 50px 0;
 }
 .section-title {
     text-align: center;
-    width: 25%;
-    border-radius: 30px;
+    width: 20%;
     background-color: gray;
-    padding: 12px;
-    margin-left: 2.5%;
+    padding: 12px 0 8px 0;;
+    margin-left: 10%;
     position: relative;
     top: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom: 2px solid red;
 }
 .primary-section {
+    border-radius: 10px;
     margin: auto auto;
     padding: 40px;
     width: 90%;
@@ -139,9 +162,6 @@ header nav ul li a {
     align-items: flex-start;
     min-width: 300px;
     margin: 8px 0;
-}
-
-.interest-img {
 }
 .interest-text {
     text-align: left;
