--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border: 1px solid reds;
 }
 body {
     background-color: white;
@@ -15,12 +16,9 @@ main {
 }
 header {
     width: 10%;
-    height: 100vh;
+    height: fit-content;
     position: sticky;
     position: -webkit-sticky;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     top: 0;
     z-index: 9999;
     background-color: gray;
@@ -31,18 +29,17 @@ header a {
     text-align: center;
 }
 header h1 {
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: left;
-    flex: 1;
-    font-size: 30px;
+    font-size: 2vw;
     box-shadow: 0 0 10px rgba(0, 0, 0, .8);
     background-color: yellow;
     z-index: 100;
 }
 header nav {
-    flex: 9;
     width: 100%;
 }
 header nav ul {
@@ -50,17 +47,13 @@ header nav ul {
     height: 100%;
 }
 header nav ul li{
-    height: 100px;
+    height: 10vh;
     width: 100%;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    font-size: 25px;
+    font-size: 1.5vw;
     font-weight: bold;
-}
-header nav a {
-    text-align: left;
-    padding-left: 12px;
 }
 header nav ul li:hover {
     background-color: red;
@@ -73,9 +66,9 @@ header nav ul li:hover {
 }
 .section-title {
     text-align: center;
-    width: 20%;
+    width: fit-content;
     background-color: gray;
-    padding: 12px 0 8px 0;;
+    padding: 8px;
     margin-left: 10%;
     position: relative;
     top: 20px;
@@ -86,7 +79,7 @@ header nav ul li:hover {
 .primary-section {
     border-radius: 10px;
     margin: auto auto;
-    padding: 40px;
+    padding: 5%;
     width: 90%;
     background-color: gray;
 }
@@ -97,9 +90,17 @@ header nav ul li:hover {
     justify-content: space-around;
     
 }
-
-.hero-img {
+.contact {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: 300px;
+}
+.hero-img {
+    flex: 3;
+    min-height: 300px;
+    border-radius: 5px;
     background-image: url(../images/ProfilePic.png);
     background-size: cover;
     background-position: center top;
@@ -108,8 +109,15 @@ header nav ul li:hover {
     align-items: flex-end;
     border: 3px solid var(--secondary-color);
 }
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    justify-content: center;
+}
 .hero-img img {
-    width: 50px;
+    max-width: 50px;
     flex: 1;
 }
 
@@ -117,14 +125,11 @@ header nav ul li:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    justify-content: space-around;
-    flex: 3;
+    justify-content: center;
+    flex: 2;
 }
 .info-section {
-    border: 3px solid var(--secondary-color);
     margin: 12px 0;
-    border-radius: 30px;
     padding: 8px 12px 12px 8px;
     display: flex;
     flex-direction: column;
@@ -147,11 +152,12 @@ header nav ul li:hover {
     width: 90%;
     margin: auto;
 }
-.info-section h3 {
+.gtkm-title{
     margin: 8px auto;
     text-align: center;
     color: var(--tertiary-color);
     width: 90%;
+    border-bottom: 1px solid black;
 }
 
 
@@ -227,6 +233,8 @@ header nav ul li:hover {
     color: black;
     padding: 8px;
     background-color: white;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .project-title:hover {
     background-color: rgba(255, 255, 255, .0);
@@ -239,7 +247,6 @@ header nav ul li:hover {
     justify-content: left;
 }
 .company {
-    width: 50%;
     display: flex;
     justify-content: left;
     margin: 20px 0;
@@ -254,7 +261,7 @@ header nav ul li:hover {
     margin-left: 12px;
 }
 .position {
-    border-left: 2px solid black;
+    border-left: 1px solid black;
 }
 .job h4 {
     margin-left: 12px;
@@ -265,4 +272,104 @@ header nav ul li:hover {
 .job ul {
     margin-left: 36px;
     list-style-type: none;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        height: fit-content;
+      }
+      header a {
+        text-decoration: none;
+        color: var(--primary-color);
+      }
+      header h1 {
+          flex: 1;
+          font-size: 4vw;
+      }
+      header nav {
+          flex: 3;
+      }
+      header nav ul {
+        text-align: center;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+      }
+      header nav ul li {
+          flex: 1;
+          font-size: 3.5vw;
+
+      }
+      main {
+          width: 100%;
+      }
+      .hero {
+          flex-direction: column;
+          align-items: center;
+      }
+      .primary-section {
+          width: 90%;
+          margin: 0 auto;
+      }
+      .contact {
+          flex-direction: row;
+          max-width: 100%;
+      }
+      .contact ul {
+          margin-left: 12px;
+      }
+      .hero-img {
+          flex: 1;
+      }
+      .section-title {
+          margin: 0 auto;
+      }
+}
+
+@media screen and (max-width: 575px) {
+    .contact {
+        flex-direction: column;
+    }
+    .projects {
+        flex-direction: column;
+    }
+    .company {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 12px 0;
+    }
+    .company:not(:last-child) {
+        border-bottom: 2px solid black;
+    }
+    .company img {
+        margin: 12px;
+    }
+    .company h3 {
+        font-size: 5vw;
+    }
+    .position {
+        margin: 12px auto;
+    }
+    .info-section {
+        margin: 0;
+    }
+    .interests {
+        align-items: left;
+        width: fit-content
+    }
+    
+
 }
