--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,21 @@
+:root {
+    --primary-color: #8dacab;
+    --secondary-color: #254e58;
+    --tertiary-color: #112d32;
+    --quaternary-color: #6e6658;
+}
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border: 1px solid reds;
 }
 body {
-    background-color: white;
+    background-image: url(../images/background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: bottom;
     display: inline-flex;
-    font-family: "azonix", Helvetica, sans-serif;
     font-family: Helvetica, Arial, sans-serif;
-    
 }
 main {
     width: 90%;
@@ -21,34 +27,36 @@ header {
     position: -webkit-sticky;
     top: 0;
     z-index: 9999;
-    background-color: gray;
+    box-shadow: 0 0 15px rgba(0, 0, 0, .8);
 }
 header a {
     text-decoration: none;
-    color: black;
     text-align: center;
+    color: var(--tertiary-color);
 }
 header h1 {
+    z-index: 100;
     height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: left;
     font-size: 2vw;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .8);
-    background-color: yellow;
-    z-index: 100;
+    background-color: var(--secondary-color);
 }
 header nav {
     width: 100%;
+    background-color: var(--primary-color);
 }
 header nav ul {
+    z-index: 50;
     list-style: none;
     height: 100%;
 }
 header nav ul li{
     height: 10vh;
     width: 100%;
+    padding: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,7 +64,7 @@ header nav ul li{
     font-weight: bold;
 }
 header nav ul li:hover {
-    background-color: red;
+    background-color: var(--quaternary-color);
     box-shadow: 0 0 12px rgba(0, 0, 0, .8);
 }
 
@@ -67,21 +75,23 @@ header nav ul li:hover {
 .section-title {
     text-align: center;
     width: fit-content;
-    background-color: gray;
     padding: 8px;
     margin-left: 10%;
     position: relative;
     top: 20px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    border-bottom: 2px solid red;
+    background-color: var(--primary-color);
+    color: var(--tertiary-color);
+    border-bottom: 3px solid var(--quaternary-color);
 }
 .primary-section {
     border-radius: 10px;
     margin: auto auto;
     padding: 5%;
     width: 90%;
-    background-color: gray;
+    background-color: var(--primary-color);
+    box-shadow: 0 0 15px rgba(0, 0, 0, .8);
 }
 
 .hero {
@@ -107,7 +117,7 @@ header nav ul li:hover {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    border: 3px solid var(--secondary-color);
+    border: 4px solid var(--quaternary-color);
 }
 .contact-info {
     display: flex;
@@ -129,11 +139,13 @@ header nav ul li:hover {
     flex: 2;
 }
 .info-section {
+    width: 95%;
     margin: 12px 0;
     padding: 8px 12px 12px 8px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: #112d32;
 }
 .about {
     display: flex;
@@ -154,10 +166,10 @@ header nav ul li:hover {
 }
 .gtkm-title{
     margin: 8px auto;
+    font-size: 20px;
     text-align: center;
-    color: var(--tertiary-color);
     width: 90%;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid var(--quaternary-color);
 }
 
 
@@ -173,11 +185,8 @@ header nav ul li:hover {
     text-align: left;
     flex: 1;
     margin: 0 20px;
+    color: var(--tertiary-color);
 }
-.info-section {
-    width: 90%;
-}
-
 .projects {
     display: flex;
     flex-wrap: wrap;
@@ -230,9 +239,9 @@ header nav ul li:hover {
     background-color: yellow;
 }
 .project-title h3 {
-    color: black;
+    color: var(--primary-color);
     padding: 8px;
-    background-color: white;
+    background-color: var(--tertiary-color);
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -258,10 +267,11 @@ header nav ul li:hover {
     background-color: white;
 }
 .job {
+    color: var(--tertiary-color);
     margin-left: 12px;
 }
 .position {
-    border-left: 1px solid black;
+    border-left: 1px solid var(--quaternary-color);
 }
 .job h4 {
     margin-left: 12px;
@@ -286,10 +296,6 @@ header nav ul li:hover {
         flex-wrap: wrap;
         width: 100%;
         height: fit-content;
-      }
-      header a {
-        text-decoration: none;
-        color: var(--primary-color);
       }
       header h1 {
           flex: 1;
@@ -352,7 +358,7 @@ header nav ul li:hover {
         margin: 12px 0;
     }
     .company:not(:last-child) {
-        border-bottom: 2px solid black;
+        border-bottom: 2px solid var(--quaternary-color);
     }
     .company img {
         margin: 12px;
@@ -370,6 +376,4 @@ header nav ul li:hover {
         align-items: left;
         width: fit-content
     }
-    
-
 }
