added background photo for prooject display of personal website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ header nav ul li:hover {
     background-image: url(../images/project1.png);
 }
 .project-2 {
-    background-image: url(../images/project2.png);
+    background-image: url(../images/mainproject.png);
 }
 .project-3 {
     background-image: url(../images/passgen.png);
