added project 2 to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ header nav ul li:hover {
     height: 100%;
 }
 .project-1 {
-    background-image: url(../images/project1.png);
+    background-image: url(../images/cinephiles-template.png);
 }
 .project-2 {
     background-image: url(../images/mainproject.png);
